[gd_scene load_steps=34 format=3 uid="uid://bbet1xkqsp2wo"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1"]
[ext_resource type="Script" path="res://scripts/player/terrain_interaction.gd" id="2_5q13p"]
[ext_resource type="PackedScene" uid="uid://dsupdgc7b2e4d" path="res://assets/models/minecraft_player.glb" id="2_gmbcs"]
[ext_resource type="PackedScene" uid="uid://cqk7bidvb6vqn" path="res://scenes/items/weapons/bullet.tscn" id="2_y2grk"]
[ext_resource type="PackedScene" uid="uid://cx2ae4w7whc6p" path="res://scenes/items/weapons/weapon_base.tscn" id="3_jtlx2"]
[ext_resource type="Script" path="res://scripts/player/player_hands.gd" id="4_064gd"]
[ext_resource type="VoxelBlockyTypeLibrary" uid="uid://csna43pkcr65d" path="res://resources/voxel_block_library.tres" id="5_5801w"]
[ext_resource type="Resource" uid="uid://bh4f3xyyxfdql" path="res://resources/items_library.tres" id="5_qnsii"]
[ext_resource type="PackedScene" uid="uid://clt86wlubencc" path="res://scenes/items/dropped_item.tscn" id="6_6kxdw"]
[ext_resource type="PackedScene" uid="uid://bo2ux01fsfpo5" path="res://scenes/other/breakparticle.tscn" id="8_8k80t"]
[ext_resource type="Theme" uid="uid://c1tenirmy1xiy" path="res://assets/menu/main_menu_theme.tres" id="10_fsqbe"]
[ext_resource type="AudioStream" uid="uid://sn5gwkdparti" path="res://assets/sounds/other/Player_hurt1.ogg" id="11_1skow"]
[ext_resource type="Script" path="res://addons/CameraShake3D/CameraShake3D/CameraShake3DNode.gd" id="11_8ntd3"]
[ext_resource type="AudioStream" uid="uid://bdoobkrlhbbdx" path="res://assets/sounds/other/Player_hurt2.ogg" id="12_lotnu"]
[ext_resource type="AudioStream" uid="uid://bkep405p361he" path="res://assets/sounds/other/Player_hurt3.ogg" id="13_djou0"]
[ext_resource type="AudioStream" uid="uid://doorfb3332k81" path="res://assets/sounds/other/Player_attack_weak.ogg" id="13_xnj4e"]

[sub_resource type="BoxShape3D" id="6"]
size = Vector3(0.8, 1.8, 1.5)

[sub_resource type="BoxShape3D" id="7"]
size = Vector3(1.5, 1.8, 0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kwqlu"]
transparency = 1
albedo_color = Color(0, 0, 0, 0.258824)

[sub_resource type="BoxMesh" id="8"]
material = SubResource("StandardMaterial3D_kwqlu")
size = Vector3(0.01, 1, 0.01)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pct4i"]
emission_shape_offset = Vector3(0.5, 1, 0.5)
emission_shape = 3
emission_box_extents = Vector3(0.3, 0.3, 0.3)
velocity_pivot = Vector3(1.45519e-11, 1.45519e-11, 1.45519e-11)
direction = Vector3(1.45519e-11, 2, 1.45519e-11)
initial_velocity_max = 3.0
scale_min = 0.0
hue_variation_min = -1.0
hue_variation_max = 1.0

[sub_resource type="Gradient" id="Gradient_4lfj0"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.666667)
colors = PackedColorArray(1, 1, 1, 0, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rm622"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_k5hjn"]
seamless = true
color_ramp = SubResource("Gradient_4lfj0")
noise = SubResource("FastNoiseLite_rm622")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_icev4"]
transparency = 2
alpha_scissor_threshold = 0.826
alpha_antialiasing_mode = 0
albedo_color = Color(0, 0, 0, 1)
albedo_texture = SubResource("NoiseTexture2D_k5hjn")

[sub_resource type="BoxMesh" id="BoxMesh_5jdb0"]
material = SubResource("StandardMaterial3D_icev4")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="Animation" id="Animation_4e7vc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 2.59181)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.333, -0.536575, -0.225)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("../../../punch:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6iggv"]
resource_name = "attack"
length = 0.17
loop_mode = 2
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(0.87055, 0.25),
"update": 2,
"values": [Vector3(0, -1.5708, 2.59181), Vector3(0.191986, -1.35263, 2.90597)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1.46409, 1),
"update": 2,
"values": [Vector3(0.333, -0.536575, -0.225), Vector3(0.208, -0.507, -0.29)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../../punch:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wp2up"]
_data = {
"RESET": SubResource("Animation_4e7vc"),
"attack": SubResource("Animation_6iggv")
}

[sub_resource type="CylinderShape3D" id="10"]
height = 1.8
radius = 0.35

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2gamh"]
properties/0/path = NodePath(".:_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:_velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:_direction")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:_rotation")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_c0y12"]
random_volume_offset_db = 2.45
streams_count = 3
stream_0/stream = ExtResource("11_1skow")
stream_1/stream = ExtResource("12_lotnu")
stream_2/stream = ExtResource("13_djou0")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yes06"]
playback_mode = 1
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("13_xnj4e")

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("rotation_root", "ANI", "hit_sfx", "pos_label", "ping_label", "collision", "hand_ani", "terrain_interation", "camera_shake", "fall_timer", "floor_ray") groups=["Player"]]
script = ExtResource("1")
rotation_root = NodePath("RotationRoot")
ANI = NodePath("RotationRoot/minecraft_player/AnimationPlayer")
hit_sfx = NodePath("hit")
pos_label = NodePath("Pos")
ping_label = NodePath("Ping")
collision = NodePath("CollisionShape3D")
hand_ani = NodePath("RotationRoot/Head/HandAni")
terrain_interation = NodePath("Hands/TerrainInteraction")
camera_shake = NodePath("RotationRoot/Head/CameraShake3DNode")
fall_timer = NodePath("Fall_time")
floor_ray = NodePath("RotationRoot/floor")
bullet_scene = ExtResource("2_y2grk")
weapon_base = ExtResource("3_jtlx2")
fall_hurt_height = 3.0
max_health = 20

[node name="Hands" type="Node" parent="." node_paths=PackedStringArray("break_part", "terrain_interaction", "floor_ray", "camera")]
script = ExtResource("4_064gd")
break_part = NodePath("TerrainInteraction/Breakparticle")
terrain_interaction = NodePath("TerrainInteraction")
items_library = ExtResource("5_qnsii")
floor_ray = NodePath("../RotationRoot/floor")
drop_item_scene = ExtResource("6_6kxdw")
camera = NodePath("../RotationRoot/Head/Camera3D")

[node name="TerrainInteraction" type="Node" parent="Hands" node_paths=PackedStringArray("camera", "block", "ping_label")]
script = ExtResource("2_5q13p")
broken_part = ExtResource("8_8k80t")
distance = 5.0
camera = NodePath("../../RotationRoot/Head/Camera3D")
block = NodePath("BlockOutline")
voxel_blocky_type_library = ExtResource("5_5801w")
item_library = ExtResource("5_qnsii")
break_particle_scene = ExtResource("8_8k80t")
ping_label = NodePath("../../Ping")

[node name="BlockOutline" type="Node3D" parent="Hands/TerrainInteraction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Area3D" type="Area3D" parent="Hands/TerrainInteraction/BlockOutline"]
collision_layer = 0
collision_mask = 134217728

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hands/TerrainInteraction/BlockOutline/Area3D"]
shape = SubResource("6")

[node name="CollisionShape2" type="CollisionShape3D" parent="Hands/TerrainInteraction/BlockOutline/Area3D"]
shape = SubResource("7")

[node name="Visible_Block" type="Node3D" parent="Hands/TerrainInteraction/BlockOutline"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.005, 0.02, -0.005)

[node name="Edge" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge2" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge3" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.5, 0.5, 0)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge4" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.5, -0.5, 0)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge5" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge6" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge7" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, 0.5, 0)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge8" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, -0.5, 0)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge9" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.5, 0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge10" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.5, 0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge11" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.5, -0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge12" type="MeshInstance3D" parent="Hands/TerrainInteraction/BlockOutline/Visible_Block"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.5, -0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Breakparticle" type="GPUParticles3D" parent="Hands/TerrainInteraction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.67777, 0.524349, -1.0743)
emitting = false
amount = 40
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_pct4i")
draw_pass_1 = SubResource("BoxMesh_5jdb0")

[node name="RotationRoot" type="Node3D" parent="."]

[node name="minecraft_player" parent="RotationRoot" instance=ExtResource("2_gmbcs")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="RotationRoot/minecraft_player/Model" index="0"]
bones/0/rotation = Quaternion(-8.55713e-09, 2.96428e-08, -5.07315e-16, 1)
bones/1/rotation = Quaternion(-0.00473571, 0.00139203, 0.00170838, 0.999986)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(0.00473803, 4.51374e-08, -0.00170179, 0.999987)
bones/3/rotation = Quaternion(0.708082, 0.00214071, -0.706113, -0.00455664)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(0.00386998, -1.26575e-07, -4.57264e-08, 0.999992)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(0.708082, 0.00214067, -0.706113, -0.00455668)
bones/5/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.706113, -0.00455665, 0.708081, -0.00214059)
bones/8/scale = Vector3(1, 1, 1)

[node name="Left Hand" type="BoneAttachment3D" parent="RotationRoot/minecraft_player/Model/Skeleton3D" index="1"]
transform = Transform3D(3.05999e-07, -0.00773978, -0.99997, 1.31547e-07, -0.99997, 0.00773978, -1, -1.33414e-07, -2.40713e-07, 0.339821, 1.03312, -0.0148718)
bone_name = "arm.L_3.001"
bone_idx = 4

[node name="Right Hand" type="BoneAttachment3D" parent="RotationRoot/minecraft_player/Model/Skeleton3D" index="2"]
transform = Transform3D(-4.60463e-07, -0.0155336, 0.999879, -1.38486e-07, -0.999879, -0.0155336, 1, -1.45572e-07, 4.54998e-07, -0.336379, 1.03312, -0.0148718)
bone_name = "arm.R_5.001"
bone_idx = 7

[node name="AnimationPlayer" parent="RotationRoot/minecraft_player" index="1"]
playback_default_blend_time = 1.0

[node name="Head" type="MeshInstance3D" parent="RotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
layers = 32
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="RotationRoot/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
cull_mask = 1048543
fov = 90.0
near = 0.01
far = 800.0

[node name="RayCast3D" type="RayCast3D" parent="RotationRoot/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.47035e-08, -1, 0, 1, -4.47035e-08, 0, 0, -0.05)
target_position = Vector3(0, -10, 0)
collision_mask = 3

[node name="Drop_node" type="Node3D" parent="RotationRoot/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.475605, -0.61644)

[node name="Hand" type="Node3D" parent="RotationRoot/Head/Camera3D"]
transform = Transform3D(3.08654e-06, 1.89145e-06, -1, 0.522502, -0.852638, 0, -0.852638, -0.522502, -3.61999e-06, 0.333, -0.536575, -0.225)

[node name="HandAni" type="AnimationPlayer" parent="RotationRoot/Head"]
root_node = NodePath("../Camera3D")
libraries = {
"": SubResource("AnimationLibrary_wp2up")
}

[node name="CameraShake3DNode" type="Node" parent="RotationRoot/Head" node_paths=PackedStringArray("camera")]
script = ExtResource("11_8ntd3")
camera = NodePath("../Camera3D")
decay = 3.0
magnitude = 0.7

[node name="AutoJump" type="RayCast3D" parent="RotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="AutoJump2" type="RayCast3D" parent="RotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="floor" type="RayCast3D" parent="RotationRoot"]
target_position = Vector3(1.45519e-11, -1000, 1.45519e-11)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("10")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_2gamh")

[node name="hit" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_c0y12")
max_distance = 10.0
panning_strength = 3.0

[node name="punch" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_yes06")
volume_db = -80.0
max_distance = 10.0
panning_strength = 3.0

[node name="Pos" type="Label" parent="."]
visible = false
offset_left = 14.0
offset_top = 13.0
offset_right = 142.0
offset_bottom = 57.0
theme = ExtResource("10_fsqbe")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
text = "hfgugug"

[node name="Ping" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("10_fsqbe")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Fall_time" type="Timer" parent="."]
wait_time = 0.5

[connection signal="block_broken" from="Hands/TerrainInteraction" to="Hands/TerrainInteraction" method="_on_block_broken"]
[connection signal="body_entered" from="Hands/TerrainInteraction/BlockOutline/Area3D" to="Hands/TerrainInteraction" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Hands/TerrainInteraction/BlockOutline/Area3D" to="Hands/TerrainInteraction" method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="Hands/TerrainInteraction" method="tick"]
[connection signal="timeout" from="Fall_time" to="." method="_on_fall_time_timeout"]

[editable path="RotationRoot/minecraft_player"]
